fix(grid): align sort order icon in fluent theme

--- a/packages/fluent/scss/grid/_variables.scss
+++ b/packages/fluent/scss/grid/_variables.scss
@@ -209,7 +209,7 @@ $kendo-grid-sort-index-height: var( --kendo-icon-size, 1rem ) !default;
 $kendo-grid-sort-index-spacing-y: calc( var( --kendo-icon-spacing, .5rem ) / 4 ) !default;
 /// Vertical offset of the grid sort index.
 /// @group grid
-$kendo-grid-sort-index-spacing-x: calc( -1 * #{$kendo-grid-sort-index-spacing-y} ) !default;
+$kendo-grid-sort-index-spacing-x: map-get( $kendo-spacing, thin ) !default;
 /// Spacing of the grid sort icon.
 /// @group grid
 $kendo-grid-sort-icon-spacing: var( --kendo-icon-spacing-lg, .5rem ) !default;
